[tool.poetry]
name = "warhammer"
version = "0.1.0"
description = ""
authors = ["NCPlayz <chowdhurynadir0@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^9.10.0"
pynput = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
